# serializer version: 1
# name: TestFormatIssues.test_format_created_issue_json_output[0]
  dict({
    'asset_key': None,
    'context': None,
    'created_by_email': 'creator@example.com',
    'description': 'Pipeline failed unexpectedly.',
    'id': 'new-issue-uuid-abc',
    'run_id': None,
    'status': 'OPEN',
    'title': 'New pipeline issue',
  })
# ---
# name: TestFormatIssues.test_format_created_issue_text_output[0]
  '''
  Title:       New pipeline issue
  Status:      OPEN
  Created By:  creator@example.com
  Description: Pipeline failed unexpectedly.
  '''
# ---
# name: TestFormatIssues.test_format_empty_issues_json_output[0]
  dict({
    'cursor': None,
    'has_more': False,
    'items': list([
    ]),
  })
# ---
# name: TestFormatIssues.test_format_empty_issues_text_output[0]
  'No issues found.'
# ---
# name: TestFormatIssues.test_format_issue_minimal_fields[0]
  '''
  Title:       Minimal issue
  Status:      CLOSED
  Created By:  user@example.com
  Description: Only required fields.
  '''
# ---
# name: TestFormatIssues.test_format_issue_with_run_id_only[0]
  '''
  Title:       Run failure issue
  Status:      OPEN
  Created By:  ops@example.com
  Run ID:      run-failing-456
  Description: This issue is linked to a specific run.
  '''
# ---
# name: TestFormatIssues.test_format_issues_json_output[0]
  dict({
    'cursor': None,
    'has_more': False,
    'items': list([
      dict({
        'asset_key': list([
          'my_asset',
        ]),
        'context': None,
        'created_by_email': 'alice@example.com',
        'description': 'The asset failed to materialize due to a connection error.',
        'id': 'issue-1-uuid-12345',
        'run_id': 'run-abc-123',
        'status': 'OPEN',
        'title': 'Asset materialization failed',
      }),
      dict({
        'asset_key': None,
        'context': None,
        'created_by_email': 'bob@example.com',
        'description': 'The daily schedule did not execute as expected.',
        'id': 'issue-2-uuid-67890',
        'run_id': None,
        'status': 'CLOSED',
        'title': 'Schedule missed execution',
      }),
      dict({
        'asset_key': None,
        'context': 'Stack trace: ...',
        'created_by_email': 'carol@example.com',
        'description': 'Sensor encountered an unhandled exception.',
        'id': 'issue-3-uuid-abcdef',
        'run_id': None,
        'status': 'OPEN',
        'title': 'Sensor error',
      }),
    ]),
  })
# ---
# name: TestFormatIssues.test_format_issues_text_output[0]
  '''
  STATUS  TITLE                         ID                   CREATED BY
  OPEN    Asset materialization failed  issue-1-uuid-12345   alice@example.com
  CLOSED  Schedule missed execution     issue-2-uuid-67890   bob@example.com
  OPEN    Sensor error                  issue-3-uuid-abcdef  carol@example.com
  '''
# ---
# name: TestFormatIssues.test_format_paginated_issues_json_output[0]
  dict({
    'cursor': 'next-page-cursor-xyz',
    'has_more': True,
    'items': list([
      dict({
        'asset_key': None,
        'context': None,
        'created_by_email': 'dave@example.com',
        'description': 'Description for first paginated issue.',
        'id': 'issue-page-1-uuid',
        'run_id': None,
        'status': 'OPEN',
        'title': 'First paginated issue',
      }),
    ]),
  })
# ---
# name: TestFormatIssues.test_format_paginated_issues_text_output[0]
  '''
  STATUS  TITLE                  ID                 CREATED BY
  OPEN    First paginated issue  issue-page-1-uuid  dave@example.com
  Note: More issues available (use --cursor to paginate)
  '''
# ---
# name: TestFormatIssues.test_format_single_issue_json_output[0]
  dict({
    'asset_key': list([
      'namespace',
      'my_critical_asset',
    ]),
    'context': 'Additional diagnostic information here.',
    'created_by_email': 'engineer@example.com',
    'description': 'The pipeline failed with a critical error during execution.',
    'id': 'single-issue-uuid-xyz',
    'run_id': 'run-xyz-789',
    'status': 'OPEN',
    'title': 'Critical pipeline failure',
  })
# ---
# name: TestFormatIssues.test_format_single_issue_text_output[0]
  '''
  Title:              Critical pipeline failure
  Status:             OPEN
  Created By:         engineer@example.com
  Run ID:             run-xyz-789
  Asset Key:          ['namespace', 'my_critical_asset']
  Description:        The pipeline failed with a critical error during execution.
  Additional Context: Additional diagnostic information here.
  '''
# ---
# name: TestFormatIssues.test_format_updated_issue_json_output[0]
  dict({
    'asset_key': None,
    'context': None,
    'created_by_email': 'owner@example.com',
    'description': 'Updated description after investigation.',
    'id': 'existing-issue-uuid-xyz',
    'run_id': None,
    'status': 'CLOSED',
    'title': 'Updated issue title',
  })
# ---
# name: TestFormatIssues.test_format_updated_issue_text_output[0]
  '''
  Title:       Updated issue title
  Status:      CLOSED
  Created By:  owner@example.com
  Description: Updated description after investigation.
  '''
# ---
# name: TestFormatIssues.test_format_updated_issue_with_context_json_output[0]
  dict({
    'asset_key': None,
    'context': 'New context added during update.',
    'created_by_email': 'owner@example.com',
    'description': 'Updated description after investigation.',
    'id': 'existing-issue-uuid-xyz',
    'run_id': None,
    'status': 'OPEN',
    'title': 'Updated issue title',
  })
# ---
# name: TestFormatIssues.test_format_updated_issue_with_context_text_output[0]
  '''
  Title:              Updated issue title
  Status:             OPEN
  Created By:         owner@example.com
  Description:        Updated description after investigation.
  Additional Context: New context added during update.
  '''
# ---
# name: TestIssueDataProcessing.test_issue_creation_with_all_statuses[0]
  dict({
    'cursor': None,
    'has_more': False,
    'items': list([
      dict({
        'asset_key': None,
        'context': None,
        'created_by_email': 'test@example.com',
        'description': 'Test issue for status OPEN.',
        'id': 'issue-open-uuid',
        'run_id': None,
        'status': 'OPEN',
        'title': 'Issue with status OPEN',
      }),
      dict({
        'asset_key': None,
        'context': None,
        'created_by_email': 'test@example.com',
        'description': 'Test issue for status CLOSED.',
        'id': 'issue-closed-uuid',
        'run_id': None,
        'status': 'CLOSED',
        'title': 'Issue with status CLOSED',
      }),
      dict({
        'asset_key': None,
        'context': None,
        'created_by_email': 'test@example.com',
        'description': 'Test issue for status TRIAGE.',
        'id': 'issue-triage-uuid',
        'run_id': None,
        'status': 'TRIAGE',
        'title': 'Issue with status TRIAGE',
      }),
    ]),
  })
# ---
# name: TestListIssuesGraphQLVariables.test_combined_filters[0]
  dict({
    'cursor': 'some-cursor',
    'filters': dict({
      'createdAfter': 1700000000.0,
      'createdBefore': 1710000000.0,
      'statuses': list([
        'CLOSED',
      ]),
    }),
    'limit': 20,
  })
# ---
# name: TestListIssuesGraphQLVariables.test_created_after_filter[0]
  dict({
    'filters': dict({
      'createdAfter': 1700000000.0,
    }),
    'limit': 10,
  })
# ---
# name: TestListIssuesGraphQLVariables.test_created_before_filter[0]
  dict({
    'filters': dict({
      'createdBefore': 1710000000.0,
    }),
    'limit': 10,
  })
# ---
# name: TestListIssuesGraphQLVariables.test_empty_statuses_omitted[0]
  dict({
    'limit': 10,
  })
# ---
# name: TestListIssuesGraphQLVariables.test_no_filters[0]
  dict({
    'limit': 5,
  })
# ---
# name: TestListIssuesGraphQLVariables.test_status_filter_multiple[0]
  dict({
    'filters': dict({
      'statuses': list([
        'OPEN',
        'TRIAGE',
      ]),
    }),
    'limit': 10,
  })
# ---
# name: TestListIssuesGraphQLVariables.test_status_filter_single[0]
  dict({
    'filters': dict({
      'statuses': list([
        'OPEN',
      ]),
    }),
    'limit': 10,
  })
# ---
